--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,19 +23,34 @@
           <%= image_tag @post.image.url(:large), class: 'img-responsive post-img' %>
         </div>
         <div class="row post-tasks">
+          <%= @post.likes.count %> 
+          <% if @post.likes.count == 1 %>
+            like
+          <% else %>
+            likes
+          <% end %>
           <% if logged_in? %>
-            <%= link_to 'Edit', edit_post_path(@post) %> |
+            <% if current_user.likes.find_by(@post.id).nil? %>
+              | <%= link_to 'Like Post', "/posts/#{@post.id}/like_post", method: :post %>
+            <% else %>
+              | <%= link_to 'Unlike Post', "/posts/#{@post.id}/unlike_post", method: :post %> 
+            <% end %>
+          <% end %>
+          <% if logged_in? && current_user == @post.user%>
+            | <%= link_to 'Edit', edit_post_path(@post) %> |
             <%= link_to 'Delete', "/posts/#{@post.id}", method: :delete, data: { confirm: 'Are you sure?' } %>
           <% end %>
         </div>
         <div class="post-discussion">
-          <div class="row">
-            <p>
-              <strong><%= link_to "#{@post.user.username}", @post.user%></strong>
-              &nbsp;<%= @post.caption %>
-            </p>
-          </div>
-          <% @post.comments.each do |comment| %>
+          <% if !@post.caption.empty? %>
+            <div class="row">
+              <p>
+                <strong><%= link_to "#{@post.user.username}", @post.user%></strong>
+                &nbsp;<%= @post.caption %>
+              </p>
+            </div>
+          <% end %>
+          <% @post.comments.take(20).each do |comment| %>
             <div class="row">
               <p>
                 <strong><%= link_to "#{comment.user.username}", comment.user%></strong>
