--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
   <body>
 
-    <header>
+    <header id="top">
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-4">
@@ -29,12 +29,17 @@
                     <a class="nav-btn" href="/users/new"><h3>Sign up</h3></a>
                   </div>
                 <% else %>
-                  <div class ="col-xs-4 col-xs-push-4">
+                  <div class ="col-xs-4">
+                    <h3 class="text-right">
+                      <%= link_to 'New Post', new_post_url %>
+                    </h3>
+                  </div>
+                  <div class ="col-xs-4">
                     <h3 class="text-right">
                       <%= link_to "@#{current_user.username}", current_user %>
                     </h3>
                   </div>
-                  <div class ="col-xs-4 col-xs-push-4">
+                  <div class ="col-xs-4">
                     <h3>
                       <%= link_to 'Log out', logout_path, method: :delete %>
                     </h3>
