--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,8 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-xs-8 col-xs-push-2">
+    <p id="notice"><%= notice %></p>
+  </div>
+</div>
 
 <div class="container-fluid">
   <div class="row about">
@@ -14,10 +18,14 @@
             </span>
             <strong>Posts:</strong>
             <%= @user.posts.count %>
-            <strong>&nbsp;&nbsp;&nbsp;&nbsp;Followers:</strong>
-            <%= link_to "#{@user.followers.count}", "/users/#{@user.id}/followers" %>
-            <strong>&nbsp;&nbsp;&nbsp;&nbsp;Following:</strong>
-            <%= link_to "#{@user.following.count}", "/users/#{@user.id}/following" %><br>
+            <a href=<%= "/users/#{@user.id}/followers" %>>
+              <strong>&nbsp;&nbsp;&nbsp;&nbsp;Followers:</strong>
+              <%= "#{@user.followers.count}" %>
+            </a>
+            <a href=<%= "/users/#{@user.id}/following" %>>
+              <strong>&nbsp;&nbsp;&nbsp;&nbsp;Following:</strong>
+              <%= "#{@user.following.count}" %><br>
+            </a>
             <strong><%= @user.name %></strong>
             <%= @user.bio %>
           </p>
@@ -46,13 +54,17 @@
     <div class="row">
         <% if @user.posts.count == 0 %>
           <div class="col-xs-12 no-posts">
-            <p>User has no posts yet</p>
+            <% if @user.name.empty? %>
+              <h2>@<%=@user.username%> has no posts yet :(</h2>
+            <% else %>
+              <h2><%=@user.name%> has no posts yet :(</h2>
+            <% end %>
           </div>
         <% else %>
           <% sorted_posts = @user.posts.reverse %>
           <% sorted_posts.each do |post| %>
-            <div class="col-xs-4">
-              <a href="post">
+            <div class="col-xs-4 grid-post">
+              <a href="post"
                 <%= image_tag post.image.url(:medium), class: 'img-responsive post-img' %>
               </a>
             </div>
@@ -60,5 +72,10 @@
         <% end %>
       </tbody>
     </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12 space">
   </div>
 </div>
