Added more styling and comment form directly in post show page

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -23,7 +23,7 @@
  */
 
 a:hover
-  background-color: none
+  background-color: transparent
 
 img
   width: 100%
@@ -46,14 +46,14 @@ header
   border-width: 0 0 1px 0
   margin-bottom: 2.5%
 
-footer
+.row.footer
   background-color: #FFFFFF
   height: 72px
   border: solid #989898
   border-width: 1px 0 0 0
   margin-top: 5%
 
-footer p
+.row.footer p
   font-size: 24px
   line-height: 72px
 
@@ -84,9 +84,6 @@ footer p
 
 .col-xs-6.col-xs-push-3.welcome a
   color: #428bca
-
-.col-xs-6.col-xs-push-3.welcome a:hover
-  background-color: none
 
 /*
  * Formatting for post show page
@@ -143,7 +140,6 @@ div.row.post-head
 
 .col-xs-12.about a
   color: #303030
-  background-color: none
 
 .row.about
   padding-bottom: 5%
