--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -59,6 +59,19 @@
             </a>
           </div>
           <div class="row post-tasks">
+            <%= post.likes.count %> 
+            <% if post.likes.count == 1 %>
+              like
+            <% else %>
+              likes
+            <% end %>
+            <% if logged_in? %>
+              <% if current_user.likes.find_by(post.id).nil? %>
+                | <%= link_to 'Like Post', "/posts/#{post.id}/like_post", method: :post %>
+              <% else %>
+                | <%= link_to 'Unlike Post', "/posts/#{post.id}/unlike_post", method: :post %> 
+              <% end %>
+            <% end %>
             <% if logged_in? && post.user == current_user %>
               <%= link_to 'Edit', edit_post_path(post) %> |
               <%= link_to 'Delete', "/posts/#{post.id}", method: :delete, data: { confirm: 'Are you sure?' } %>
@@ -67,8 +80,10 @@
           <div class="post-discussion">
             <div class="row">
               <p>
-                <strong><%= link_to "#{post.user.username}", post.user%></strong>
-                <%= post.caption %>
+                <% if !post.caption.empty? %>
+                  <strong><%= link_to "#{post.user.username}", post.user%></strong>
+                  <%= post.caption %>
+                <% end %>
               </p>
             </div>
             <% if post.comments.count > 2 then %>
