Finalized functionality and styling...for now

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -109,7 +109,8 @@ div.row.post-head
 
 .row.post-tasks
   padding: 12px
-  text-align: center
+  text-align: left
+  font-size: 24px
 
 .post-discussion
   padding: 12px
@@ -127,8 +128,11 @@ div.row.post-head
   font-size: 32px
 
 .img-responsive.img-circle
-  height: 100%
   width: 100%
+  background-color: white
+
+.col-xs-12.form
+  padding-top: 24px
 
 /*
  * Formatting for user show page
