--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,13 +19,15 @@
             </p>
           </div>
         </div>
-        <div class="row post-img">
-          <%= image_tag @post.image.url(:large), class: 'img-responsive post-img' %>
-        </div>
+        <a href=<%= "/posts/#{@post.id}" %>>
+          <div class="row post-img">
+            <%= image_tag @post.image.url(:large), class: 'img-responsive post-img' %>
+          </div>
+        </a>
         <div class="row post-tasks">
-          <%= @post.likes.count %> 
+          <strong><%= @post.likes.count %></strong>
           <% if @post.likes.count == 1 %>
-            like
+            <strong>like</strong>
           <% else %>
             likes
           <% end %>
@@ -37,8 +39,8 @@
             <% end %>
           <% end %>
           <% if logged_in? && current_user == @post.user%>
-            | <%= link_to 'Edit', edit_post_path(@post) %> |
-            <%= link_to 'Delete', "/posts/#{@post.id}", method: :delete, data: { confirm: 'Are you sure?' } %>
+            | <%= link_to 'Edit', edit_post_path(@post) %>
+            | <%= link_to 'Delete', "/posts/#{@post.id}", method: :delete, data: { confirm: 'Are you sure?' } %>
           <% end %>
         </div>
         <div class="post-discussion">
@@ -62,7 +64,7 @@
           <% if logged_in? %>
 
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-xs-12 form">
                 
                 <% @comment = Comment.new %>
                 <% @comment.post_id = params[:post_id] %>
@@ -84,7 +86,7 @@
                     <%= f.text_field :body, placeholder: "Add a comment..." %>
                   </div>
                   <div class="actions">
-                    <%= f.submit %>
+                    <%= f.submit 'Post Comment'%>
                   </div>
                 <% end %>
 
