--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,32 +2,22 @@
   <div class="col-xs-12">
 
     <%= bootstrap_form_for(@user) do |f| %>
-      <% if @user.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-          <ul>
-          <% @user.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-          </ul>
-        </div>
-      <% end %>
+      
 
       <div class="field">
-        <%= f.text_field :username %>
+        <%= f.text_field :username, placeholder: "Numbers & lowercase letters" %>
       </div>
       <div class="field">
-        <%= f.password_field :password %>
+        <%= f.password_field :password, placeholder: "Password" %>
       </div>
       <div class="field">
         <%= f.file_field :profile_picture %>
       </div>
       <div class="field">
-        <%= f.text_field :name %>
+        <%= f.text_field :name, placeholder: "John Doe" %>
       </div>
       <div class="field">
-        <%= f.text_field :bio %>
+        <%= f.text_field :bio, placeholder: "Tell the world" %>
       </div>
       <div class="actions">
         <%= f.submit %>
