Removed reset_session statement

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,10 +54,14 @@
 
     <%= yield %>
 
-    <div class="row footer">
-      <div class="col-xs-12">
-        <p class="text-center">Created by Cameron Cabo</p>
+    <footer>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-12">
+            <p class="text-center">Created by Cameron Cabo</p>
+          </div>
+        </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
