--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -46,14 +46,14 @@ header
   border-width: 0 0 1px 0
   margin-bottom: 2.5%
 
-.row.footer
+footer
   background-color: #FFFFFF
   height: 72px
   border: solid #989898
   border-width: 1px 0 0 0
   margin-top: 5%
 
-.row.footer p
+footer p
   font-size: 24px
   line-height: 72px
 
