--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -112,4 +112,10 @@
 
   <% end %>
 
+<div class="row">
+  <div class="col-xs-12 space">
+  </div>
+  <div class="col-xs-12 space">
+  </div>
+</div>
 <% end %>
