fixed some styling :

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -131,6 +131,9 @@ div.row.post-head
   width: 100%
   background-color: white
 
+.col-xs-1.thumb-img
+  padding: 0
+
 .col-xs-12.form
   padding-top: 24px
 
