--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -57,6 +57,9 @@ footer p
   font-size: 24px
   line-height: 72px
 
+.text-right
+  font-size: 28px
+
 .back
   padding-top: 5%
 
@@ -114,7 +117,7 @@ footer p
   padding: 12px
 
 .post-discussion p
-  font-size: 20px
+  font-size: 18px
 
 .col-xs-6.col-xs-push-3.post
   padding: 0
