removed padding from circular images

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -198,6 +198,9 @@ footer p
   margin-bottom: 16px
   margin-top: 16px
 
+.col-xs-2.col-xs-push-2.img
+  padding: 0
+
 .col-xs-10.user-info
   color: #555
   text-decoration: none
