--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 
 <div class="container-fluid">
   <div class="row about">
-    <div class="col-xs-2 col-xs-push-2">
+    <div class="col-xs-2 col-xs-push-2 img">
       <%= image_tag @user.profile_picture.url(:medium), class: 'img-responsive img-circle'%>
     </div>
     <div class="col-xs-6 col-xs-push-2">
