removed more padding

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -74,6 +74,9 @@ footer p
  * Formatting for index page
  */
 
+.col-xs-2.thumb-img.list
+  padding: 0
+
 .col-xs-8.col-xs-push-2.welcome
   padding: 36px
 
